# alerta-web-addon

./: Dockerfile  README.md  forms.py  model.py  pyproject.toml  requirements.yml  server.py
alertawebaddon/: __init__.py  __main__.py  forms.py  model.py  views.py
alertawebaddon/static/css/: main.css  menu.css
alertawebaddon/templates/: 403page.html  404page.html  base.html  index.html
alertawebaddon/templates/snippets/: env_update.html  environments.html  sidebar.html  skip_delete.html  skip_update.html  template_delete.html  template_update.html  templates.html  topic_delete.html  topic_update.html  topics.html  topics_skip.html
inventory/prod/: main.yml
inventory/prod/group_vars/: all.yml
playbooks/: prepare_host.yml
playbooks/files/: requirements.txt
playbooks/vars/: nginx_parameters.yml
static/css/: main.css  menu.css
templates/: base.html  index.html
templates/snippets/: env_delete.html  env_update.html  environments.html  sidebar.html  templates.html  topic_update.html  topics.html  topics_skip.html
