[tool.poetry]
name = "alerta-web-addon"
version = "0.1.0"
description = "single web page server to configure alerta templates and topics"
authors = ["OTC customer service monitoring team"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/opentelekomcloud-infra/alerta-web-addon"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"
Flask-Bootstrap = "^3.3.7"
Flask-SQLAlchemy = "^2.4.3"
Flask-WTF = "^0.14.3"
Flask-Login = "^0.5.0"
Flask-Dance = "^3.0.0"
psycopg2-binary = "^2.8.5"


[tool.poetry.dev-dependencies]
pytest = "^5.3"
pylint = "^2.4"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"